--- a/estructura de archivos/src/views/products/cartPay.ejs
+++ b/estructura de archivos/src/views/products/cartPay.ejs
@@ -46,7 +46,26 @@
                                 <p class="total-total">Total</p>
                                 <p class="total-total-cantidad">$0</p>
                             </div>
-                            <img src="/images/medios-de-pago-1723294542" alt="">
+                            <div class="payment-method">
+                                <img src="//d26lpennugtm8s.cloudfront.net/assets/common/img/logos/payment/new_logos_payment/visa@2x.png"
+                                    class="method-payment-logo" alt="visa" />
+                                <img src="//d26lpennugtm8s.cloudfront.net/assets/common/img/logos/payment/new_logos_payment/mastercard@2x.png"
+                                    class="method-payment-logo" alt="mastercard" />
+                                <img src="//d26lpennugtm8s.cloudfront.net/assets/common/img/logos/payment/new_logos_payment/amex@2x.png"
+                                    class="method-payment-logo" alt="amex" />
+                                <img src="//d26lpennugtm8s.cloudfront.net/assets/common/img/logos/payment/new_logos_payment/ar/banelco@2x.png"
+                                    class="method-payment-logo" alt="banelco" />
+                                <img src="//d26lpennugtm8s.cloudfront.net/assets/common/img/logos/payment/new_logos_payment/mercadopago@2x.png"
+                                    class="method-payment-logo" alt="mercadopago" />
+                                <img src="//d26lpennugtm8s.cloudfront.net/assets/common/img/logos/payment/new_logos_payment/pagofacil@2x.png"
+                                    class="method-payment-logo" alt="pagofacil" />
+                                <img src="//d26lpennugtm8s.cloudfront.net/assets/common/img/logos/payment/new_logos_payment/rapipago@2x.png"
+                                    class="method-payment-logo" alt="rapipago" />
+                                <img src="//d26lpennugtm8s.cloudfront.net/assets/common/img/logos/payment/new_logos_payment/nativa@2x.png"
+                                    class="method-payment-logo" alt="nativa" />
+                                <img src="//d26lpennugtm8s.cloudfront.net/assets/common/img/logos/payment/new_logos_payment/ar/tarjeta-naranja@2x.png"
+                                    class="method-payment-logo" alt="tarjeta-naranja" />
+                            </div>
                             <div class="total-comprar">
                                 <button><a href="/cartPay">Comprar</a></button>
                             </div>
