--- a/estructura de archivos/src/views/partials/header.ejs
+++ b/estructura de archivos/src/views/partials/header.ejs
@@ -70,31 +70,65 @@
             </div>
             <div class="header_div">
                 <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 header_div--navbar-desktop">
-                    <li class="nav-item">
+                    <li class="nav-item"> <!--  Creación de producto -->
                         <a class="nav-link active" aria-current="page" href="/products/productsLoad"><i class="fa-solid fa-plus"></i> Crear nuevo producto </a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item"> <!-- Tienda -->
                         <a class="nav-link active" aria-current="page" href="#">Tienda</a>
                     </li>
-                    <li class="nav-item dropdown">
+                        <li class="nav-item dropdown"> <!-- Juegos -->
                         <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Juegos</a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        <ul class="dropdown-menu menu_dropdown">
+                            <li>
+                            <small class="title__nav_item" style="margin-left: 2.5rem;">Plataformas</small>
+                            <ul class="cointeiner__links_nav_item" style="list-style: none;">
+                                <li><a class="dropdown-item" href="#">Steam Juegos</a></li>
+                                <li><a class="dropdown-item" href="#">Xbox Juegos</a></li>
+                                <li><a class="dropdown-item" href="#">PSN Juegos</a></li>
+                                <li><a class="dropdown-item" href="#">Origin Juegos</a></li>
+                                <li><a class="dropdown-item" href="#">Ubisoft Connect Juegos</a></li>
+                                <li><a class="dropdown-item" href="#">Epic Games Juegos</a></li>
+                                <li><a class="dropdown-item" href="#">GOG Juegos</a></li>
+                                <li><a class="dropdown-item" href="#">Battle.net Juegos</a></li>
+                            </ul>
+                            </li>
+                            <li>
+                                <small class="title__nav_item" style="margin-left: 0.39rem;">Descubrir por generos</small>
+                                <ul class="cointeiner__links_nav_item" style="list-style: none;">
+                                    <li><a class="dropdown-item" href="#">Acción</a></li>
+                                    <li><a class="dropdown-item" href="#">Aventura</a></li>
+                                    <li><a class="dropdown-item" href="#">Lucha</a></li>
+                                    <li><a class="dropdown-item" href="#">FPS / TPS</a></li>
+                                    <li><a class="dropdown-item" href="#">Indie</a></li>
+                                    <li><a class="dropdown-item" href="#">Epic Games Juegos</a></li>
+                                    <li><a class="dropdown-item" href="#">GOG Juegos</a></li>
+                                    <li><a class="dropdown-item" href="#">Battle.net Juegos</a></li>
+                                </ul>
+                            </li>
                         </ul>
                     </li>
-                    <li class="nav-item dropdown">
+                    <li class="nav-item dropdown"> <!-- Tarjeta de regalo -->
                         <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Tarjeta de regalo</a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        <ul class="dropdown-menu tarjetaDeRegalo__move">
+                            <li>
+                                <small class="title__nav_item" style="margin-left: 2.5rem;">Lista de tarjetas de regalo</small>
+                                <ul class="cointeiner__links_nav_item" style="list-style: none;">
+                                    <li><a class="dropdown-item" href="#">Steam Tarjetas</a></li>
+                                    <li><a class="dropdown-item" href="#">Xbox Live Tarjetas</a></li>
+                                    <li><a class="dropdown-item" href="#">PSN Juegos</a></li>
+                                    <li><a class="dropdown-item" href="#">PSN Tarjetas</a></li>
+                                    <li><a class="dropdown-item" href="#">Tarjetas pavos de Fortnite</a></li>
+                                    <li><a class="dropdown-item" href="#">Roblox Robux Tarjetas</a></li>
+                                    <li><a class="dropdown-item" href="#">Blizzard Tarjetas</a></li>
+                                    <li><a class="dropdown-item" href="#">Google Play Tarjetas</a></li>
+                                    <li><a class="dropdown-item" href="#">Otras tarjetas de regalo</a></li>
+                                </ul>
+                            </li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Xbox</a>
-                        <ul class="dropdown-menu">
+                        <ul class="dropdown-menu cointeiner__links_nav_item">
                             <li><a class="dropdown-item" href="#">Action</a></li>
                             <li><a class="dropdown-item" href="#">Another action</a></li>
                             <li><a class="dropdown-item" href="#">Something else here</a></li>
