cambio de titulos en footer

--- a/estructura de archivos/src/views/partials/footer.ejs
+++ b/estructura de archivos/src/views/partials/footer.ejs
@@ -1,99 +1,125 @@
 <footer class="footer__content">
-    <section class="footer--logo">
-        <a href="/index"><img src="/images/logo2.png" alt="Logo"></a>
-    </section>
-    <section class="footer_nav">
-        <nav class="footer_nav-home">
-            <p>Titulos</p>
-            <ul type="none">
-                <li><a href="">Home</a></li>
-                <li><a href="">Mi cuenta</a></li>
-                <li><a href="">Contactanos</a></li>
-                <li><a href="">Ayuda</a></li>
-            </ul>
-        </nav>
-        <nav class="footer_nav-aboutUs">
-            <p>
-                Titulos
-            </p>
-            <ul type="none">
-                <li><a href=""> Sobre nosotros</a></li>
-                <li><a href="">Politica de privacidad</a></li>
-                <li><a href="">Politica de cookies</a></li>
-                <li><a href="">Aviso legal</a></li>
-            </ul>
-        </nav>
-        <nav class="footer_nav-aboutUs">
-            <p>
-                Titulos
-            </p>
-            <ul type="none">
-                <li><a href="">Titulos</a></li>
-                <li><a href="">Titulos</a></li>
-                <li><a href="">Titulos</a></li>
-                <li><a href="">Titulos</a></li>
-            </ul>
-        </nav>
-        <div class="footer_nav-app">
-            <p>Descarga nuestra app</p>
-            <a href=""><img
-                    src="/images/google-play.png"
-                    alt=""></a>
-            <a href=""><img
-                    src="/images/app-store.png"
-                    alt=""></a>
-        </div>
-    </section>
-    <section class="payment-method-section">
-        <p class="payment-method-title">Metodos de pago</p>
-        <div class="payment-method">
-            <img src="//d26lpennugtm8s.cloudfront.net/assets/common/img/logos/payment/new_logos_payment/visa@2x.png"
-                class="method-payment-logo" alt="visa">
-            <img src="//d26lpennugtm8s.cloudfront.net/assets/common/img/logos/payment/new_logos_payment/mastercard@2x.png"
-                class="method-payment-logo" alt="mastercard">
-            <img src="//d26lpennugtm8s.cloudfront.net/assets/common/img/logos/payment/new_logos_payment/amex@2x.png"
-                class="method-payment-logo" alt="amex">
-            <img src="//d26lpennugtm8s.cloudfront.net/assets/common/img/logos/payment/new_logos_payment/ar/banelco@2x.png"
-                class="method-payment-logo" alt="banelco">
-            <img src="//d26lpennugtm8s.cloudfront.net/assets/common/img/logos/payment/new_logos_payment/mercadopago@2x.png"
-                class="method-payment-logo" alt="mercadopago">
-            <img src="//d26lpennugtm8s.cloudfront.net/assets/common/img/logos/payment/new_logos_payment/pagofacil@2x.png"
-                class="method-payment-logo" alt="pagofacil">
-            <img src="//d26lpennugtm8s.cloudfront.net/assets/common/img/logos/payment/new_logos_payment/rapipago@2x.png"
-                class="method-payment-logo" alt="rapipago">
-            <img src="//d26lpennugtm8s.cloudfront.net/assets/common/img/logos/payment/new_logos_payment/nativa@2x.png"
-                class="method-payment-logo" alt="nativa">
-            <img src="//d26lpennugtm8s.cloudfront.net/assets/common/img/logos/payment/new_logos_payment/ar/tarjeta-naranja@2x.png"
-                class="method-payment-logo" alt="tarjeta-naranja">
-        </div>
-    </section>
+  <section class="footer--logo">
+    <a href="/index"><img src="/images/logo2.png" alt="Logo" /></a>
+  </section>
+  <section class="footer_nav">
+    <nav class="footer_nav-home">
+      <p>Menu</p>
+      <ul type="none">
+        <li><a href="/">Home</a></li>
+        <li><a href="/users/profile">Mi perfil</a></li>
+        <li><a href="/products/productsLoad">Vender</a></li>
+        <li><a href="/users/login">Login</a></li>
+      </ul>
+    </nav>
+    <nav class="footer_nav-aboutUs">
+      <p>Nosotros</p>
+      <ul type="none">
+        <li><a href=""> Sobre nosotros</a></li>
+        <li><a href="">Politica de privacidad</a></li>
+        <li><a href="">Politica de cookies</a></li>
+        <li><a href="">Aviso legal</a></li>
+      </ul>
+    </nav>
+    <nav class="footer_nav-aboutUs">
+      <p>¿Te ayudamos?</p>
+      <ul type="none">
+        <li><a href="">Ayuda</a></li>
+        <li><a href="">Preguntas frecuentes</a></li>
+        <li><a href="">Contactanos</a></li>
+        <li><a href="">...</a></li>
+      </ul>
+    </nav>
+    <div class="footer_nav-app">
+      <p>Descarga nuestra app</p>
+      <a href=""><img src="/images/google-play.png" alt="" /></a>
+      <a href=""><img src="/images/app-store.png" alt="" /></a>
+    </div>
+  </section>
+  <section class="payment-method-section">
+    <p class="payment-method-title">Metodos de pago</p>
+    <div class="payment-method">
+      <img
+        src="//d26lpennugtm8s.cloudfront.net/assets/common/img/logos/payment/new_logos_payment/visa@2x.png"
+        class="method-payment-logo"
+        alt="visa"
+      />
+      <img
+        src="//d26lpennugtm8s.cloudfront.net/assets/common/img/logos/payment/new_logos_payment/mastercard@2x.png"
+        class="method-payment-logo"
+        alt="mastercard"
+      />
+      <img
+        src="//d26lpennugtm8s.cloudfront.net/assets/common/img/logos/payment/new_logos_payment/amex@2x.png"
+        class="method-payment-logo"
+        alt="amex"
+      />
+      <img
+        src="//d26lpennugtm8s.cloudfront.net/assets/common/img/logos/payment/new_logos_payment/ar/banelco@2x.png"
+        class="method-payment-logo"
+        alt="banelco"
+      />
+      <img
+        src="//d26lpennugtm8s.cloudfront.net/assets/common/img/logos/payment/new_logos_payment/mercadopago@2x.png"
+        class="method-payment-logo"
+        alt="mercadopago"
+      />
+      <img
+        src="//d26lpennugtm8s.cloudfront.net/assets/common/img/logos/payment/new_logos_payment/pagofacil@2x.png"
+        class="method-payment-logo"
+        alt="pagofacil"
+      />
+      <img
+        src="//d26lpennugtm8s.cloudfront.net/assets/common/img/logos/payment/new_logos_payment/rapipago@2x.png"
+        class="method-payment-logo"
+        alt="rapipago"
+      />
+      <img
+        src="//d26lpennugtm8s.cloudfront.net/assets/common/img/logos/payment/new_logos_payment/nativa@2x.png"
+        class="method-payment-logo"
+        alt="nativa"
+      />
+      <img
+        src="//d26lpennugtm8s.cloudfront.net/assets/common/img/logos/payment/new_logos_payment/ar/tarjeta-naranja@2x.png"
+        class="method-payment-logo"
+        alt="tarjeta-naranja"
+      />
+    </div>
+  </section>
 
-    <section class="footer__lastsection">
-        <p class="footer_social_networks-title">Visita nuestras redes sociales</p>
-        <nav class="footer__lastsection__navbar">
-            <a href="">
-                <figure><i class="fa-brands fa-facebook-f"></i></figure>
-            </a>
-            <a href="">
-                <figure><i class="fa-brands fa-twitter"></i></figure>
-            </a>
-            <a href="">
-                <figure><i class="fa-brands fa-linkedin-in"></i></figure>
-            </a>
-            <a href="">
-                <figure><i class="fa-brands fa-instagram"></i></figure>
-            </a>
-            <a href="">
-                <figure><i class="fa-brands fa-discord"></i></figure>
-            </a>
-        </nav>
-        <p class="footer__lastsection__copyright">Copyright © 2022 DALF-STORE</p>
-    </section>
+  <section class="footer__lastsection">
+    <p class="footer_social_networks-title">Visita nuestras redes sociales</p>
+    <nav class="footer__lastsection__navbar">
+      <a href="">
+        <figure><i class="fa-brands fa-facebook-f"></i></figure>
+      </a>
+      <a href="">
+        <figure><i class="fa-brands fa-twitter"></i></figure>
+      </a>
+      <a href="">
+        <figure><i class="fa-brands fa-linkedin-in"></i></figure>
+      </a>
+      <a href="">
+        <figure><i class="fa-brands fa-instagram"></i></figure>
+      </a>
+      <a href="">
+        <figure><i class="fa-brands fa-discord"></i></figure>
+      </a>
+    </nav>
+    <p class="footer__lastsection__copyright">Copyright © 2022 DALF-STORE</p>
+  </section>
 </footer>
-<script src="https://kit.fontawesome.com/ae7c764a16.js " crossorigin="anonymous "></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js "
-    integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk "
-    crossorigin="anonymous "></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js "
-    integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK "
-    crossorigin="anonymous "></script>
+<script
+  src="https://kit.fontawesome.com/ae7c764a16.js "
+  crossorigin="anonymous "
+></script>
+<script
+  src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js "
+  integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk "
+  crossorigin="anonymous "
+></script>
+<script
+  src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js "
+  integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK "
+  crossorigin="anonymous "
+></script>
