stock and section added

--- a/estructura de archivos/src/views/products/productDetail.ejs
+++ b/estructura de archivos/src/views/products/productDetail.ejs
@@ -24,10 +24,7 @@
                         </article>
                         <p class="detail__product__envio"><i class="fa-solid fa-truck"></i> Envío gratis a todo el país</p>
                         <div class="bar-button-stock">
-                            <input type="text" class="stock-input" placeholder=" Stock disponible: 99">
-                            <button class="contador-resta">-</button>
-                            <button class="contador-valor">1</button>
-                            <button class="contador-suma">+</button>
+                            <input style="text-align: center; pointer-events: none;" type="text" class="stock-input" placeholder=" Stock disponible: 99">
                         </div>  
                         <article class="detail__purchase__buttons">
                             <div class="detail__purchase__buttons--cart">
