styles modified - logo/background/secondary color of login register profile change

--- a/estructura de archivos/public/css/general.css
+++ b/estructura de archivos/public/css/general.css
@@ -6,7 +6,7 @@
     --C_Blue: #0d6efd;
     --C_Discord: #3d47a0;
     --C_Light_Grey: #606164;
-    --C_Pink_Logo: #e400ff;
+    --C_Pink_Logo: #ff00a2;
     --C_Lightblue_Logo: #00e4ff;
     --C_Soft_Gray: #808080;
 }
